2003-01-13  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>

	* configure.in (ALL_LINGUAS): Added "es" (Spanish).

2003-01-13  James Henstridge  <james@daa.com.au>

	* src/font-view.c (create_text_pixmap): refactor so that it
	creates a pixmap big enough to display everything.
	(main): make the window resizable, and add font preview to a
	scrolled window.

2003-01-12  Miloslav Trmac  <mitr@volny.cz>

	* configure.in (ALL_LINGUAS): Added "cs" (Czech).

2003-01-11  Kjartan Maraas  <kmaraas@gnome.org>

        * configure.in: (ALL_LINGUAS): Added "no".

2003-01-10  Kenneth Christiansen <kenneth@gnu.org>

        * configure.in: (ALL_LINGUAS): Added "da".

2003-01-10  Christian Rose  <menthos@menthos.com>

	* configure.in: (ALL_LINGUAS): Added "sv".

2003-01-09  Christian Neumair  <chris@gnome-de.org>

	* configure.in (ALL_LINGUAS): Added German (de).

2003-01-09  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.

	* src/fontilus.mime: ttc files are True Types.

	* src/*.c: update copyright messages.

	* fontilus.spec.in: update to include schema and run a
	postinstallation script to install the schema.

	* configure.in: look for gconftool.

	* src/fontilus.schemas.in: add schemas to set up thumbnailing.

2002-12-28  James Henstridge  <james@daa.com.au>

	* src/font-view.c (main): actually turn on internationalisation.

2002-12-23  James Henstridge  <james@daa.com.au>

	* src/thumbnailer.c (main): get rid of unused variable.

	* configure.in (GETTEXT_PACKAGE): turn on i18n stuff.
	(CFLAGS): add -Wall to compile flags.
	(*_LIBS): remove -export-dynamic from libs.

2002-12-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* .cvsignore: hide generated files
	* src/fontilus.mime: add missing file

2002-12-13  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* README:
	* src/Makefile.am:
	* src/fontilus.keys:
	add support for OpenType fonts, fix pcf.gz detection

2002-12-12  James Henstridge  <james@daa.com.au>

	* NEWS: add news items.
