@@ -1,3 +1,8 @@
+2003-01-15  James Henstridge  <james@daa.com.au>
+
+	* src/font-view.c (set_icon): set the icon on the window based on
+	the file type.
+
 2003-01-13  Pablo Gonzalo del Campo  <pablodc@bigfoot.com>
 
 	* configure.in (ALL_LINGUAS): Added "es" (Spanish).
